--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -77,7 +77,9 @@
     path: /etc/systemd/system/td-agent.service.d/override.conf
     state: present
     insertafter: '^ExecStart=$'
-    line: 'ExecStart=vault --config-file {{ fluentd_vault_config_path }} env -p {{ fluentd_secret_path }}{{ fluent_secret_name }} -- {{ initial_cmd.stdout }}'
+    line: > 
+    'ExecStart=vault --config-file {{ fluentd_vault_config_path }}
+    env -p {{ fluentd_secret_path }}{{ fluent_secret_name }} -- {{ initial_cmd.stdout }}'
   tags:
   - never
   - aggregator
